# play_motion2-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
include/play_motion2/: play_motion2.hpp
play_motion2/: CHANGELOG.rst  CMakeLists.txt  package.xml
play_motion2/include/play_motion2/: client.hpp  motion_loader.hpp  motion_planner.hpp
play_motion2/src/play_motion2/: client.cpp  motion_planner.cpp
play_motion2/test/: play_motion2_node_test.cpp  play_motion2_node_test.hpp  play_motion2_test.cpp
play_motion2/test/rrbot/: controllers.launch.py
play_motion2_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rpm/: ros-humble-play-motion2-msgs.spec  ros-humble-play-motion2.spec  template.spec
src/play_motion2/: motion_loader.cpp  motion_planner.cpp  play_motion2.cpp
test/: motion_loader_test.cpp  play_motion2_config.yaml  play_motion2_node_test.hpp
